testsuite/tests/linear/should_fail/LinearPartialSig.hs
{-# LANGUAGE LinearTypes #-}
module LinearPartialSig where

f :: a -->.(_) a
f x = x
