testsuite/tests/linear/should_fail/LinearPartialSig.stderr

LinearPartialSig.hs:4:13: error:
    • Found type wildcard ‘_’
        standing for ‘'Omega :: GHC.Types.Multiplicity’
      To use the inferred type, enable PartialTypeSignatures
    • In the type signature: f :: a ->{_} a
